--- a/project/Objects.in
+++ b/project/Objects.in
@@ -226,7 +226,6 @@ OBJECTS += \
 ../source/interface/IReader.o \
 ../source/Reader.o \
 ../source/platform/pc/PcCartridge.o \
-../source/platform/pc/PcFileSystem.o \
 ../source/platform/pc/PcLog.o \
 ../source/platform/pc/PcRendererDevice.o \
 ../source/platform/pc/posix.o \
@@ -305,20 +304,18 @@ OBJECTS += \
 ../source/interface/IEventMovieListener.o \
 ../source/interface/IEventResourceLoaderListener.o \
 ../source/interface/IEventSystemListener.o \
-../source/interface/IFileSystem.o \
 ../source/interface/IGameApp.o \
 ../source/interface/IInput.o \
 ../source/interface/IInputJoystick.o \
 ../source/interface/IEventListener.o \
 ../source/interface/IInputKeyboard.o \
 ../source/interface/IRenderable.o \
+../source/FileSystem.o \
 ../source/Key.o \
 ../source/Keyframe.o \
 ../source/LeakReport.o \
 ../source/ModuleManager.o \
 ../source/Movie.o \
-../source/Package.o \
-../source/PackageManager.o \
 ../source/Particle.o \
 ../source/ParticleEmitter.o \
 ../source/ParticleEmitterObject.o \
