First working draft using Json Reader to load a sprite

--- a/project/Objects.in
+++ b/project/Objects.in
@@ -305,6 +305,7 @@ OBJECTS += \
 ../source/ParticleEmitter.o \
 ../source/ParticleEmitterObject.o \
 ../source/ParticleManager.o \
+../source/Project.o \
 ../source/SeedInit.o \
 ../source/Sprite.o \
 ../source/Timeline.o \
