--- a/project/Makefile
+++ b/project/Makefile
@@ -12,12 +12,12 @@ LD = ld
 GCC = g++
 CC = gcc
 
-CDEFS = -DSEED_BUILD -DSEED_USE_STL -DBUILD_SDL
+CDEFS = -DSEED_BUILD -DBUILD_SDL
 CFLAGS = -Wall -shared
 
 ifneq ($(mode),release)
 	CFLAGS += -g
-	CDEFS += -DDEBUG -DYMEM_DEBUG -DYMEM_PARANOID_CHECK -DSEED_ENABLE_PROFILER
+	CDEFS += -DDEBUG -DSEED_ENABLE_PROFILER
 	mode = debug
 endif
 
