--- a/tests/bin/app.config
+++ b/tests/bin/app.config
@@ -1,5 +1,5 @@
 {
-	"bDebugSprite": false,
+	"bDebugSprite": true,
 	"bMultipleInstances": false,
 	"bWarningMultipleInstances": false,
 	"sRendererDevice": "OpenGL ES1",
