--- a/seed.in
+++ b/seed.in
@@ -132,4 +132,4 @@ SEED  = source/Viewport.o \
 		source/platform/glfw/glfwScreen.o \
 		source/platform/glfw/glfwMutex.o \
 		source/platform/glfw/glfwInput.o \
-		source/api/soil/soilTexture.cpp
+		source/api/soil/soilTexture.o
