--- a/contrib.in
+++ b/contrib.in
@@ -110,90 +110,94 @@ CONTRIB = \
 		contrib/oggplay/oggplay.o \
 		contrib/ogg/framing.o \
 		contrib/ogg/bitwise.o \
-		contrib/Box2D/Collision/b2TimeOfImpact.o \
-		contrib/Box2D/Collision/b2DynamicTree.o \
-		contrib/Box2D/Collision/b2Distance.o \
-		contrib/Box2D/Collision/b2Collision.o \
-		contrib/Box2D/Collision/b2CollidePolygon.o \
-		contrib/Box2D/Collision/b2CollideCircle.o \
-		contrib/Box2D/Collision/b2BroadPhase.o \
-		contrib/Box2D/Collision/Shapes/b2PolygonShape.o \
-		contrib/Box2D/Collision/Shapes/b2CircleShape.o \
-		contrib/Box2D/Common/b2StackAllocator.o \
-		contrib/Box2D/Common/b2Settings.o \
-		contrib/Box2D/Common/b2Math.o \
-		contrib/Box2D/Common/b2BlockAllocator.o \
-		contrib/Box2D/Dynamics/b2WorldCallbacks.o \
-		contrib/Box2D/Dynamics/b2World.o \
-		contrib/Box2D/Dynamics/b2Island.o \
-		contrib/Box2D/Dynamics/b2Fixture.o \
-		contrib/Box2D/Dynamics/b2ContactManager.o \
-		contrib/Box2D/Dynamics/b2Body.o \
-		contrib/Box2D/Dynamics/Contacts/b2TOISolver.o \
-		contrib/Box2D/Dynamics/Contacts/b2ContactSolver.o \
-		contrib/Box2D/Dynamics/Contacts/b2PolygonContact.o \
-		contrib/Box2D/Dynamics/Contacts/b2Contact.o \
-		contrib/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.o \
-		contrib/Box2D/Dynamics/Contacts/b2CircleContact.o \
-		contrib/Box2D/Dynamics/Joints/b2WeldJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2RevoluteJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2PulleyJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2PrismaticJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2MouseJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2LineJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2Joint.o \
-		contrib/Box2D/Dynamics/Joints/b2GearJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2FrictionJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2DistanceJoint.o \
 		contrib/vectormath/vfpmath/vsinf.o \
-		contrib/vectormath/vfpmath/matrix_impl.o \
-		contrib/lua/lzio.o \
-		contrib/lua/lvm.o \
-		contrib/lua/lundump.o \
-		contrib/lua/ltm.o \
-		contrib/lua/ltablib.o \
-		contrib/lua/ltable.o \
-		contrib/lua/lstrlib.o \
-		contrib/lua/lstring.o \
-		contrib/lua/lstate.o \
-		contrib/lua/lparser.o \
-		contrib/lua/loslib.o \
-		contrib/lua/lopcodes.o \
-		contrib/lua/lobject.o \
-		contrib/lua/loadlib.o \
-		contrib/lua/lmem.o \
-		contrib/lua/lmathlib.o \
-		contrib/lua/llex.o \
-		contrib/lua/liolib.o \
-		contrib/lua/linit.o \
-		contrib/lua/lgc.o \
-		contrib/lua/lfunc.o \
-		contrib/lua/ldump.o \
-		contrib/lua/ldo.o \
-		contrib/lua/ldebug.o \
-		contrib/lua/ldblib.o \
-		contrib/lua/lctype.o \
-		contrib/lua/lcorolib.o \
-		contrib/lua/lcode.o \
-		contrib/lua/lbitlib.o \
-		contrib/lua/lbaselib.o \
-		contrib/lua/lauxlib.o \
-		contrib/lua/lapi.o \
-		contrib/flash/SDL/SDL_image/IMG.o \
-		contrib/flash/SDL/SDL_image/IMG_bmp.o \
-		contrib/flash/SDL/SDL_image/IMG_gif.o \
-		contrib/flash/SDL/SDL_image/IMG_jpg.o \
-		contrib/flash/SDL/SDL_image/IMG_lbm.o \
-		contrib/flash/SDL/SDL_image/IMG_pcx.o \
-		contrib/flash/SDL/SDL_image/IMG_png.o \
-		contrib/flash/SDL/SDL_image/IMG_pnm.o \
-		contrib/flash/SDL/SDL_image/IMG_tga.o \
-		contrib/flash/SDL/SDL_image/IMG_tif.o \
-		contrib/flash/SDL/SDL_image/IMG_xpm.o
+		contrib/vectormath/vfpmath/matrix_impl.o
 
 #
 # Not for flascc
 #
+
+#		contrib/lua/lzio.o \
+#		contrib/lua/lvm.o \
+#		contrib/lua/lundump.o \
+#		contrib/lua/ltm.o \
+#		contrib/lua/ltablib.o \
+#		contrib/lua/ltable.o \
+#		contrib/lua/lstrlib.o \
+#		contrib/lua/lstring.o \
+#		contrib/lua/lstate.o \
+#		contrib/lua/lparser.o \
+#		contrib/lua/loslib.o \
+#		contrib/lua/lopcodes.o \
+#		contrib/lua/lobject.o \
+#		contrib/lua/loadlib.o \
+#		contrib/lua/lmem.o \
+#		contrib/lua/lmathlib.o \
+#		contrib/lua/llex.o \
+#		contrib/lua/liolib.o \
+#		contrib/lua/linit.o \
+#		contrib/lua/lgc.o \
+#		contrib/lua/lfunc.o \
+#		contrib/lua/ldump.o \
+#		contrib/lua/ldo.o \
+#		contrib/lua/ldebug.o \
+#		contrib/lua/ldblib.o \
+#		contrib/lua/lctype.o \
+#		contrib/lua/lcorolib.o \
+#		contrib/lua/lcode.o \
+#		contrib/lua/lbitlib.o \
+#		contrib/lua/lbaselib.o \
+#		contrib/lua/lauxlib.o \
+#		contrib/lua/lapi.o \
+
+#		contrib/flash/SDL/SDL_image/IMG.o \
+#		contrib/flash/SDL/SDL_image/IMG_bmp.o \
+#		contrib/flash/SDL/SDL_image/IMG_gif.o \
+#		contrib/flash/SDL/SDL_image/IMG_jpg.o \
+#		contrib/flash/SDL/SDL_image/IMG_lbm.o \
+#		contrib/flash/SDL/SDL_image/IMG_pcx.o \
+#		contrib/flash/SDL/SDL_image/IMG_png.o \
+#		contrib/flash/SDL/SDL_image/IMG_pnm.o \
+#		contrib/flash/SDL/SDL_image/IMG_tga.o \
+#		contrib/flash/SDL/SDL_image/IMG_tif.o \
+#		contrib/flash/SDL/SDL_image/IMG_xpm.o \
+
+#		contrib/Box2D/Collision/b2TimeOfImpact.o \
+#		contrib/Box2D/Collision/b2DynamicTree.o \
+#		contrib/Box2D/Collision/b2Distance.o \
+#		contrib/Box2D/Collision/b2Collision.o \
+#		contrib/Box2D/Collision/b2CollidePolygon.o \
+#		contrib/Box2D/Collision/b2CollideCircle.o \
+#		contrib/Box2D/Collision/b2BroadPhase.o \
+#		contrib/Box2D/Collision/Shapes/b2PolygonShape.o \
+#		contrib/Box2D/Collision/Shapes/b2CircleShape.o \
+#		contrib/Box2D/Common/b2StackAllocator.o \
+#		contrib/Box2D/Common/b2Settings.o \
+#		contrib/Box2D/Common/b2Math.o \
+#		contrib/Box2D/Common/b2BlockAllocator.o \
+#		contrib/Box2D/Dynamics/b2WorldCallbacks.o \
+#		contrib/Box2D/Dynamics/b2World.o \
+#		contrib/Box2D/Dynamics/b2Island.o \
+#		contrib/Box2D/Dynamics/b2Fixture.o \
+#		contrib/Box2D/Dynamics/b2ContactManager.o \
+#		contrib/Box2D/Dynamics/b2Body.o \
+#		contrib/Box2D/Dynamics/Contacts/b2TOISolver.o \
+#		contrib/Box2D/Dynamics/Contacts/b2ContactSolver.o \
+#		contrib/Box2D/Dynamics/Contacts/b2PolygonContact.o \
+#		contrib/Box2D/Dynamics/Contacts/b2Contact.o \
+#		contrib/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.o \
+#		contrib/Box2D/Dynamics/Contacts/b2CircleContact.o \
+#		contrib/Box2D/Dynamics/Joints/b2WeldJoint.o \
+#		contrib/Box2D/Dynamics/Joints/b2RevoluteJoint.o \
+#		contrib/Box2D/Dynamics/Joints/b2PulleyJoint.o \
+#		contrib/Box2D/Dynamics/Joints/b2PrismaticJoint.o \
+#		contrib/Box2D/Dynamics/Joints/b2MouseJoint.o \
+#		contrib/Box2D/Dynamics/Joints/b2LineJoint.o \
+#		contrib/Box2D/Dynamics/Joints/b2Joint.o \
+#		contrib/Box2D/Dynamics/Joints/b2GearJoint.o \
+#		contrib/Box2D/Dynamics/Joints/b2FrictionJoint.o \
+#		contrib/Box2D/Dynamics/Joints/b2DistanceJoint.o \
+
 
 #		contrib/oggplay/oggplay_tcp_reader.o \
 
