Box2D sample now working correctly and with pick/drag;

--- a/samples/bin/box2d_app.config
+++ b/samples/bin/box2d_app.config
@@ -4,7 +4,7 @@
 	bWarningMultipleInstances: false
 	sRendererDevice: "OpenGL ES1"
 	sWorkingDirectory: "./"
-	sTitle: "Using Box2D"
+	sTitle: "Using Box2D - Creating and picking objects"
 	sDescription: "A sample application using Box2D physics"
 	sPublisherName: "Seed Framework"
 	iResolutionWidth: 800
