re-organized samples with numbering. hard to fix, but better to visualize. added one or another sample (some duplicate with few changes)

--- a/samples/bin/pointer_sample.config
+++ b/samples/bin/pointer_sample.config
@@ -3,15 +3,13 @@
 	[
 		{
 			sName: MainRenderer
-			sScene: state_machine_sample.scene
+			sScene: pointer_sample.scene
 		}
 	]
 	aViewport:
 	[
 		{
 			sName: MainView
-			iX: 0
-			iY: 0
 			iWidth: 800
 			iHeight: 600
 			sCamera: MainCamera
