--- a/samples/bin/pres1.config
+++ b/samples/bin/pres1.config
@@ -2,8 +2,8 @@
 	aRenderer:
 	[
 		{
-			sName: MainRenderer
-			sScene: state_machine_sample.scene
+			sName: Renderer1
+			sScene: pres1_scene1.scene
 		}
 	]
 	aViewport:
@@ -15,7 +15,7 @@
 			iWidth: 800
 			iHeight: 600
 			sCamera: MainCamera
-			sRenderer: MainRenderer
+			sRenderer: Renderer1
 		}
 	]
 }
