--- a/samples/bin/state_machine_app.config
+++ b/samples/bin/state_machine_app.config
@@ -4,8 +4,8 @@
 	bWarningMultipleInstances: false
 	sRendererDevice: "OpenGL ES1"
 	sWorkingDirectory: "./"
-	sTitle: "Loading an Image"
-	sDescription: "How to use and get an image handle"
+	sTitle: "Using State Machine"
+	sDescription: "How to use State Machine"
 	sPublisherName: "Seed Framework"
 	iResolutionWidth: 800
 	iResolutionHeight: 600
