--- a/samples/bin/pointer_app.config
+++ b/samples/bin/pointer_app.config
@@ -4,8 +4,8 @@
 	bWarningMultipleInstances: false
 	sRendererDevice: "OpenGL ES1"
 	sWorkingDirectory: "./"
-	sTitle: "Loading an Image"
-	sDescription: "How to use and get an image handle"
+	sTitle: "Using mouse input"
+	sDescription: "How to use pointer device input (mouse or touch)"
 	sPublisherName: "Seed Framework"
 	iResolutionWidth: 800
 	iResolutionHeight: 600
