--- a/samples/bin/pres2_app.config
+++ b/samples/bin/pres2_app.config
@@ -4,8 +4,8 @@
 	bWarningMultipleInstances: false
 	sRendererDevice: "OpenGL ES1"
 	sWorkingDirectory: "./"
-	sTitle: "Loading an Image"
-	sDescription: "How to use and get an image handle"
+	sTitle: "Presentation Sample 2 - Multiple views"
+	sDescription: "A sample application using presentation settings for multiple viewports"
 	sPublisherName: "Seed Framework"
 	iResolutionWidth: 800
 	iResolutionHeight: 600
