Added samples 3, 4, 6, 7, 8, 9 and 11 to Visual

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,19 @@ tests/bin/tests
 /visual/vs2012/seed.v11.suo
 /visual/vs2012/seed/Debug/
 /visual/vs2012/seed/seed.vcxproj.user
+/visual/vs2012/Sample_02_image/Debug/
+/visual/vs2012/Sample_03_pointer_input/Debug/
+/visual/vs2012/Sample_04_keyboard_input/Debug/
+/visual/vs2012/Sample_08_particles/Debug/
+/visual/vs2012/Sample_02_image/Sample_02_image.vcxproj.user
+/visual/vs2012/Sample_03_pointer_input/Sample_03_pointer_input.vcxproj.user
+/visual/vs2012/Sample_04_keyboard_input/Sample_04_keyboard_input.vcxproj.user
+/visual/vs2012/Sample_06_sprite/Debug/
+/visual/vs2012/Sample_08_particles/Sample_08_particles.vcxproj.user
+/visual/vs2012/Sample_11_state_machine/Debug/
+/visual/vs2012/Sample_09_tilemap/Debug/
+/visual/vs2012/Sample_06_sprite/Sample_06_sprite.vcxproj.user
+/visual/vs2012/Sample_09_tilemap/Sample_09_tilemap.vcxproj.user
+/visual/vs2012/Sample_11_state_machine/Sample_11_state_machine.vcxproj.user
+/visual/vs2012/sample_07_music_sfx/Debug/
+/visual/vs2012/sample_07_music_sfx/sample_07_music_sfx.vcxproj.user
