--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ tests/bin/tests
 /visual/vs2012/Sample_11_state_machine/Sample_11_state_machine.vcxproj.user
 /visual/vs2012/sample_07_music_sfx/Debug/
 /visual/vs2012/sample_07_music_sfx/sample_07_music_sfx.vcxproj.user
+/visual/vs2012/Sample_12_savesystem/Debug/
+/visual/vs2012/Sample_12_savesystem/Sample_12_savesystem.vcxproj.user
+/visual/vs2012/Sample_13_gui_rocket/Debug/
+/visual/vs2012/Sample_13_gui_rocket/Sample_13_gui_rocket.vcxproj.user
