--- a/visual/vs2012/seed/seed.vcxproj
+++ b/visual/vs2012/seed/seed.vcxproj
@@ -18,6 +18,7 @@
     <ClCompile Include="..\..\..\source\api\oal\oalSoundSystem.cpp" />
     <ClCompile Include="..\..\..\source\api\oal\vorbis_util.cpp" />
     <ClCompile Include="..\..\..\source\api\ogl\oglES1RendererDevice.cpp" />
+    <ClCompile Include="..\..\..\source\api\rocket\RocketInterface.cpp" />
     <ClCompile Include="..\..\..\source\api\yajl\JsonReader.cpp" />
     <ClCompile Include="..\..\..\source\api\yajl\JsonWriter.cpp" />
     <ClCompile Include="..\..\..\source\Camera.cpp" />
@@ -157,7 +158,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(ProjectDir)..\..\..\include\;$(ProjectDir)..\..\..\contrib\;$(ProjectDir)..\..\..\contrib\windows\;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)..\..\..\include\;$(ProjectDir)..\..\..\contrib\;$(ProjectDir)..\..\..\contrib\windows\;$(ProjectDir)..\..\..\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
