Updated projects for generating lib in the lib directory

--- a/visual/vs2012/Sample_11_state_machine/Sample_11_state_machine.vcxproj
+++ b/visual/vs2012/Sample_11_state_machine/Sample_11_state_machine.vcxproj
@@ -55,6 +55,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;BUILD_SDL;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(ProjectDir)..\..\..\samples\11_state_machine;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4275</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
