Dangling pointer fix

--- a/visual/vs2012/seed/seed.vcxproj.filters
+++ b/visual/vs2012/seed/seed.vcxproj.filters
@@ -290,4 +290,7 @@
       <Filter>api\rocket</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\include\Container.h" />
+  </ItemGroup>
 </Project>
