--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,15 @@ tests/bin/tests
 /visual/vs2012/seed/Release/
 /visual/vs2012/contrib/Release/
 /visual/vs2012/contrib/contrib.vcxproj.user
+/visual/vs2012/Sample_00_skel/Release/
+/visual/vs2012/Sample_01_presentation/Release/
+/visual/vs2012/Sample_02_image/Release/
+/visual/vs2012/Sample_03_pointer_input/Release/
+/visual/vs2012/Sample_04_keyboard_input/Release/
+/visual/vs2012/Sample_06_sprite/Release/
+/visual/vs2012/Sample_08_particles/Release/
+/visual/vs2012/Sample_09_tilemap/Release/
+/visual/vs2012/Sample_11_state_machine/Release/
+/visual/vs2012/Sample_12_savesystem/Release/
+/visual/vs2012/Sample_13_gui_rocket/Release/
+/visual/vs2012/sample_07_music_sfx/Release/
