--- a/contrib.in
+++ b/contrib.in
@@ -98,6 +98,7 @@ CONTRIB = \
 		contrib/oggz/oggz.o \
 		contrib/oggz/metric_internal.o \
 		contrib/oggz/dirac.o \
+		#contrib/oggplay/oggplay_tcp_reader.o \
 		contrib/oggplay/oggplay_yuv2rgb.o \
 		contrib/oggplay/oggplay_tools.o \
 		contrib/oggplay/oggplay_seek.o \
@@ -111,7 +112,11 @@ CONTRIB = \
 		contrib/ogg/framing.o \
 		contrib/ogg/bitwise.o \
 		contrib/vectormath/vfpmath/vsinf.o \
-		contrib/vectormath/vfpmath/matrix_impl.o \
+		contrib/vectormath/vfpmath/matrix_impl.o
+
+
+ifneq (,$(findstring rocket, $(CONFIG)))
+CONTRIB += \
 		contrib/freetype/src/autofit/afangles.o \
 		contrib/freetype/src/autofit/afcjk.o \
 		contrib/freetype/src/autofit/afdummy.o \
@@ -143,7 +148,7 @@ CONTRIB = \
 		contrib/freetype/src/base/ftgxval.o \
 		contrib/freetype/src/base/ftinit.o \
 		contrib/freetype/src/base/ftlcdfil.o \
-		contrib/freetype/src/base/ftmac.o \
+		#contrib/freetype/src/base/ftmac.o \
 		contrib/freetype/src/base/ftmm.o \
 		contrib/freetype/src/base/ftobjs.o \
 		contrib/freetype/src/base/ftotval.o \
@@ -473,9 +478,11 @@ CONTRIB = \
 		contrib/Rocket/Source/Debugger/DebugGeometry.o \
 		contrib/Rocket/Source/Debugger/DebugPlugin.o \
 		contrib/Rocket/Source/Debugger/DebugSystemInterface.o
+endif
 
 ifneq (,$(findstring sdl, $(CONFIG)))
-CONTRIB +=	contrib/flash/SDL/SDL_image/IMG.o \
+CONTRIB += \
+		contrib/flash/SDL/SDL_image/IMG.o \
 		contrib/flash/SDL/SDL_image/IMG_bmp.o \
 		contrib/flash/SDL/SDL_image/IMG_gif.o \
 		contrib/flash/SDL/SDL_image/IMG_jpg.o \
@@ -489,8 +496,9 @@ CONTRIB +=	contrib/flash/SDL/SDL_image/IMG.o \
 endif
 
 
-ifneq (,$(findstring html5, $(CONFIG)))
-CONTRIB +=	contrib/lua/lzio.o \
+ifneq (,$(findstring lua, $(CONFIG)))
+CONTRIB += \
+		contrib/lua/lzio.o \
 		contrib/lua/lvm.o \
 		contrib/lua/lundump.o \
 		contrib/lua/ltm.o \
@@ -521,48 +529,61 @@ CONTRIB +=	contrib/lua/lzio.o \
 		contrib/lua/lbitlib.o \
 		contrib/lua/lbaselib.o \
 		contrib/lua/lauxlib.o \
-		contrib/lua/lapi.o \
-		contrib/Box2D/Collision/b2TimeOfImpact.o \
-		contrib/Box2D/Collision/b2DynamicTree.o \
-		contrib/Box2D/Collision/b2Distance.o \
-		contrib/Box2D/Collision/b2Collision.o \
-		contrib/Box2D/Collision/b2CollidePolygon.o \
-		contrib/Box2D/Collision/b2CollideCircle.o \
-		contrib/Box2D/Collision/b2BroadPhase.o \
-		contrib/Box2D/Collision/Shapes/b2PolygonShape.o \
-		contrib/Box2D/Collision/Shapes/b2CircleShape.o \
-		contrib/Box2D/Common/b2StackAllocator.o \
-		contrib/Box2D/Common/b2Settings.o \
-		contrib/Box2D/Common/b2Math.o \
-		contrib/Box2D/Common/b2BlockAllocator.o \
-		contrib/Box2D/Dynamics/b2WorldCallbacks.o \
-		contrib/Box2D/Dynamics/b2World.o \
-		contrib/Box2D/Dynamics/b2Island.o \
-		contrib/Box2D/Dynamics/b2Fixture.o \
-		contrib/Box2D/Dynamics/b2ContactManager.o \
-		contrib/Box2D/Dynamics/b2Body.o \
-		contrib/Box2D/Dynamics/Contacts/b2TOISolver.o \
-		contrib/Box2D/Dynamics/Contacts/b2ContactSolver.o \
-		contrib/Box2D/Dynamics/Contacts/b2PolygonContact.o \
-		contrib/Box2D/Dynamics/Contacts/b2Contact.o \
-		contrib/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.o \
-		contrib/Box2D/Dynamics/Contacts/b2CircleContact.o \
-		contrib/Box2D/Dynamics/Joints/b2WeldJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2RevoluteJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2PulleyJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2PrismaticJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2MouseJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2LineJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2Joint.o \
-		contrib/Box2D/Dynamics/Joints/b2GearJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2FrictionJoint.o \
-		contrib/Box2D/Dynamics/Joints/b2DistanceJoint.o
+		contrib/lua/lapi.o
 endif
 
-#		contrib/oggplay/oggplay_tcp_reader.o \
+ifneq (,$(findstring box2d, $(CONFIG)))
+CONTRIB += \
+		contrib/Box2D/Collision/b2Distance.o \
+		contrib/Box2D/Collision/Shapes/b2EdgeShape.o \
+		contrib/Box2D/Collision/Shapes/b2PolygonShape.o \
+		contrib/Box2D/Collision/Shapes/b2ChainShape.o \
+		contrib/Box2D/Collision/Shapes/b2CircleShape.o \
+		contrib/Box2D/Collision/b2TimeOfImpact.o \
+		contrib/Box2D/Collision/b2BroadPhase.o \
+		contrib/Box2D/Collision/b2CollideCircle.o \
+		contrib/Box2D/Collision/b2CollidePolygon.o \
+		contrib/Box2D/Collision/b2DynamicTree.o \
+		contrib/Box2D/Collision/b2CollideEdge.o \
+		contrib/Box2D/Collision/b2Collision.o \
+		contrib/Box2D/Dynamics/b2Body.o \
+		contrib/Box2D/Dynamics/b2Island.o \
+		contrib/Box2D/Dynamics/b2Fixture.o \
+		contrib/Box2D/Dynamics/b2WorldCallbacks.o \
+		contrib/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.o \
+		contrib/Box2D/Dynamics/Contacts/b2CircleContact.o \
+		contrib/Box2D/Dynamics/Contacts/b2ContactSolver.o \
+		contrib/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.o \
+		contrib/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.o \
+		contrib/Box2D/Dynamics/Contacts/b2Contact.o \
+		contrib/Box2D/Dynamics/Contacts/b2PolygonContact.o \
+		contrib/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.o \
+		contrib/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.o \
+		contrib/Box2D/Dynamics/Joints/b2DistanceJoint.o \
+		contrib/Box2D/Dynamics/Joints/b2RopeJoint.o \
+		contrib/Box2D/Dynamics/Joints/b2PrismaticJoint.o \
+		contrib/Box2D/Dynamics/Joints/b2MouseJoint.o \
+		contrib/Box2D/Dynamics/Joints/b2RevoluteJoint.o \
+		contrib/Box2D/Dynamics/Joints/b2PulleyJoint.o \
+		contrib/Box2D/Dynamics/Joints/b2FrictionJoint.o \
+		contrib/Box2D/Dynamics/Joints/b2Joint.o \
+		contrib/Box2D/Dynamics/Joints/b2GearJoint.o \
+		contrib/Box2D/Dynamics/Joints/b2WeldJoint.o \
+		contrib/Box2D/Dynamics/Joints/b2WheelJoint.o \
+		contrib/Box2D/Dynamics/b2World.o \
+		contrib/Box2D/Dynamics/b2ContactManager.o \
+		contrib/Box2D/Common/b2Settings.o \
+		contrib/Box2D/Common/b2StackAllocator.o \
+		contrib/Box2D/Common/b2BlockAllocator.o \
+		contrib/Box2D/Common/b2Draw.o \
+		contrib/Box2D/Common/b2Timer.o \
+		contrib/Box2D/Common/b2Math.o \
+		contrib/Box2D/Rope/b2Rope.o
+endif
 
 ifneq (,$(findstring glfw, $(CONFIG)))
-CONTRIB +=	contrib/glew/glew.o \
+CONTRIB += \
+		contrib/glew/glew.o \
 		contrib/glfw/window.o \
 		contrib/glfw/time.o \
 		contrib/glfw/thread.o \
@@ -583,7 +604,8 @@ CONTRIB +=	contrib/glew/glew.o \
 endif
 
 ifneq (,$(findstring WIN32, $(DEFS)))
-CONTRIB +=	contrib/glfw/win32/win32_enable.o \
+CONTRIB += \
+		contrib/glfw/win32/win32_enable.o \
 		contrib/glfw/win32/win32_fullscreen.o \
 		contrib/glfw/win32/win32_glext.o \
 		contrib/glfw/win32/win32_init.o \
