--- a/ios/tests/tests/tests-Info.plist
+++ b/ios/tests/tests/tests-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.seedframework.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>br.com.winterlabs.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
