--- a/.gitignore
+++ b/.gitignore
@@ -36,12 +36,16 @@ Thumbs.db
 *.creator.user*
 *.pro.user*
 
-# Temp files
+# Temp files        #
+#####################
 doc/
 tests/bin/tests
 *.ogg
 *__Debug/
 *__Release/
+
+# Visual Studio    #
+###################
 /visual/vs2012/Debug/
 /visual/vs2012/Sample_00_skel/Debug/
 /visual/vs2012/contrib/Debug/
@@ -89,3 +93,8 @@ tests/bin/tests
 /visual/vs2012/Sample_12_savesystem/Release/
 /visual/vs2012/Sample_13_gui_rocket/Release/
 /visual/vs2012/sample_07_music_sfx/Release/
+
+# XCode Files       #
+#####################
+*.xcuserdatad/
+
