Added initial OpenGL2 renderer device

--- a/tests/resources/configs/app.config
+++ b/tests/resources/configs/app.config
@@ -2,7 +2,7 @@
 	"bDebugSprite": true,
 	"bMultipleInstances": false,
 	"bWarningMultipleInstances": false,
-	"sRendererDevice": "OpenGL ES2",
+	"sRendererDevice": "opengl 2.x",
 	"sWorkingDirectory": "./",
 	"sTitle": "My Game Sample",
 	"sDescription": "A Very Simple Game Sample",
